bhdl-parser/tree-sitter-bhdl/grammar.js
    source_file: $ => repeat($._top_level_item),

    _top_level_item: $ => choice(
      // Definitions
      $.board_definition,
      $.module_definition,
      $.component_definition,
      $.typedef_definition,
      $.property_set_definition,
      $.interface_definition,
      $.net_class_definition,
      $.via_style_definition,

      // Other Blocks/Statements
      $.constraint_block, // Should constraint be top-level?
      $.library_statement,
      $.use_statement,
      $.generate_block, // Should generate be top-level?

      // Test cases / Simple top-level statements
      $._top_level_expression_statement,
      $._top_level_boolean_statement, 
      $._top_level_string_statement,  
      $._top_level_char_statement,    
      $._top_level_enum_statement,    
      $._top_level_physical_statement,
      $._top_level_time_statement,    
      $.comment
    ),

    // Wrapper rules for top-level literals followed by a semicolon
    board_definition: $ => seq(
      'board',
      field('name', $.identifier),
      '{',
      repeat(choice(
        $.parameters_block,
        $.ports_block,
        $.components_block,
        $.connections_block,
        $.constraint_block,
        $.layer_stackup_block,
        $.default_design_rules_block
      )),
      '}'
    ),

    component_definition: $ => seq(
      'component',
      field('name', $.identifier),
      '{',
       repeat(choice(
         $.parameters_block,
         $.pins_block,
         $.interfaces_block
       )),
      '}'
    ),

    typedef_definition: $ => prec('definition', seq(
      'typedef',
      field('name', $.identifier),
      optional(seq('extends', field('parent', $.identifier))),
      '{',
      repeat($.property_assignment),
      '}'
    )),

    property_assignment: $ => seq(
      field('property_name', $.identifier),
      ':',
      field('value', $._expression),
      ';'
    ),

    // Property assignment without trailing semicolon (for use in {} blocks)
    _expression: $ => choice(
      // Literals & Base Cases
      $.physical_literal,
      $.time_literal,
      $.string_literal,
      $.boolean_literal,
      $.null_literal,
      $.enum_literal,
      $.char_literal,
      $.identifier,
      $.integer_literal,
      $.float_literal,
      // Operators / Constructs
      $.parenthesized_expression,
      $.unary_expression,
      $.binary_expression,
      $.range_expression,
      $.array_literal,
      $.function_call_expression,
      $.member_access,
      $.subscript_access,
      $.ternary_expression
    ),

    physical_literal: $ => token(/-?\d([\d_]*\d)?(\.\d([\d_]*\d)?)?([eE][-+]?\d([\d_]*\d)?)?[TGMKkµmunpf]?(Vdc|Vac|Vrms|Vpp|V|A|Ohm|F|H|W|Hz|degC|pct|S|dB|bit|Bd|cd|lm|lx|mm|µm|mil|in)/),

    // Redefine time_literal as a single token
    identifier: $ => /[a-zA-Z_][a-zA-Z0-9_]*/,

    // === Comments ===
