bhdl-parser/tree-sitter-bhdl/test/corpus/corpus.txt
===

board TestBoard {
} end board;

---

(source_file (board_definition name: (identifier) body: (board_body)))

===

component MCU end component;

---

(source_file (component_definition name: (identifier) body: (component_body)))

===

typedef MemorySpec {
  type = DDR4;
  capacity = 16GB;
  data_width = 64 bits;
} end typedef;

---

(source_file (typedef_definition name: (identifier) body: (typedef_body (property_assignment name: (identifier) value: (identifier)) (property_assignment name: (identifier) value: (physical_literal)) (property_assignment name: (identifier) value: (physical_literal)))))

===

// Minimal test case for component instantiation

// Valid Physical Literal for use in parameters
1kOhm;

board TestBoard {
  parameters {
    N: integer = 4;
  }

  components {
    // --- Instantiations ---

    // Parameter-less (Requires {})
    MCU P1 {};
    Device DEVICE1 {};

    // With parameters
    Capacitor C1 { value = 10uF, voltage = 16Vdc };

    // Inside generate block (parameter-less)
    generate for idx in 0..1 {
       LED L[idx] {};
    }

    // Inside generate block (with parameters)
    generate for i in 0..N-1 {
       Resistor R_GEN[i] { Value = 1kOhm };
    }
  }

  connections {
    // Basic connection to check endpoints are still okay
    P1.out -> DEVICE1.in;
    C1.p1 -> GND;
  }
} end board;

// Component Definition (Empty)
// -----------------------------
component MCU end component;
component Device end component;
component Capacitor { pins { p1: inout; p2: inout; } } end component;
component Resistor { pins { p1: inout; p2: inout; } } end component;
component LED { pins { A: in; K: out; } } end component;

// Typedef Definition
// ------------------
typedef MemorySpec {
  type = DDR4;
  capacity = 16GB;
  data_width = 64 bits;
} end typedef;

// Typedef Definition with Inheritance
// -----------------------------------
typedef FastMemorySpec extends MemorySpec {
  speed : 3200MHz;
} end typedef;

// Property Set Definition
// -----------------------
property_set ManufacturerInfo {
  manufacturer_name : "Example Corp.";
  part_number : "XYZ-1234"; // with comment
};

// Component with Interfaces
// -------------------------
component InterfaceUser {
  interfaces {
    bus1 : interface AxiBus;
    bus2 : interface AxiBus(addr_width=32, data_width=64bits);
    clk  : interface Clock(freq=100MHz, phase=0); // With comment
  }
} end component;

// Constraint Example
// ------------------
board ConstraintExample { // No error follows this one... interesting.

    constraint cpu { // Example: Assign properties to cpu component instance
      location : U1;
      voltage : 3.3V;
      placement_region : "Top Left";
    }

    constraint mem.p1 { // Example: Assign property to a pin
        // ... pin properties
    }
} end board;

// Expressions
// -----------
1 + 2 * 3
(1 + 2) * 3
1k + 2 // Physical + Integer -> Physical? Define semantics later.

// Range Expressions
1ns .. 5ns
10 MHz .. 20 MHz

// Component with Complex Parameters
// ---------------------------------
component ComplexParams {
  parameters {
    width = 16 * (1 + 2);
    frequency_range = 10MHz .. 20kHz;
  }
} end component;

// Component with Pins, Ports, Generate
// ------------------------------------
component SignalTest {
  parameters {
    DATA_WIDTH = 32;
  }
  pins {
    // Simple generate for pins
    generate i in 0 .. DATA_WIDTH-1 loop
        pin data_out[i] : out signal;
    end loop; // Added end loop
  }
} end component;

component PortTest {
  parameters {
    width = 8;
  }
  ports {
    // Simple generate for ports
    generate i in 0 .. width-1 loop
      port data_in[i] : inout signal; // Corrected from pin to port
      port data_out[i] : inout signal;
    end loop; // Added end loop
  }
} end component;

// Component Instantiation with Generate
// -------------------------------------
component Resistor end component;
component Series end component;

board GeneratedCircuit {
  parameters {
    NUM_RESISTORS = 4;
  }
  components {
    // Generate component instantiations
    generate i in 0 .. NUM_RESISTORS-1 loop
      Resistor R_GEN[i](Value=1k); // Instantiation with () parameters
      Series R_SER[i]{Value=1k};   // Instantiation with {} parameters
    end loop; // Added end loop
  }
  pins {
      pin Vin, Vout;
  }
  ports {
      port P1 : in signal;
      port P2 : out signal;
  }
  connections {
      // Connect generated components
      generate i in 0 .. NUM_RESISTORS-2 loop
          R_GEN[i].p2 -> R_GEN[i+1].p1;
      end loop; // Added end loop
      Vin -> R_GEN[0].p1;
      R_GEN[NUM_RESISTORS-1].p2 -> Vout;
      P1 -> R_SER[0].p_in;
      R_SER[NUM_RESISTORS-1].p_out -> P2;
  }
} end board;

// Function Calls
// --------------
func(arg1)
obj.method(1, 2)
no_args()
math.sin(x=var1, y=var2)

// Property Assignment with Function Call Result
property = get_value(input=foo, default=5); // Error here?

// Generate block with pin declarations and constraints
// -----------------------------------------------------
component PinConstraints {
    parameters {
        width = 8;
    }
    pins {
        generate i in 0 .. width-1 loop
            pin data[i] : inout signal;
        end loop; // Added end loop
        pin clk : in signal;
    }
    // Constraint within component def
    generate i in 0 .. width-1 loop
        constraint data[i] { io_standard = LVCMOS33; }
    end loop; // Added end loop
} end component;

// Local Variable Declarations (Generate Block)
// ---------------------------------------------
// TBD: Add support for local variable declarations inside generate blocks
// Example:
// generate i in 0 to 7 loop
//   variable temp : integer := i * 2;
//   Resistor R[i](value = temp * 100);
// end loop;

// Physical Literals Test
// ----------------------
component PhysicalLiterals {
    parameters {
        resistance = 1kohm;
        capacitance = 10pF;
        frequency = 100.5 MHz;
        voltage = 3.3 V;
        current = 10mA;
        time_delay = 5 ns;
        power_val = 100mW;
        distance = 2.54 mm;
    }
} end component;

// Enum Literals Test
// ------------------
component EnumTest {
  parameters {
    state = State'Idle;
    color = Color'Red;
  }
} end component;

// String Literals
// ---------------
"Hello World"
"String with "escapes" and \ backslashes"

// Boolean Literals
// ----------------
true
false

// Array Literals (TBD)
// ---------------
// [1, 2, 3]
// ["a", "b", "c"]
// [1k, 2k, 3k]

// Nested Structures (TBD)
// ----------------------
// Maybe later for complex parameter/property values

// Comments Test
// -------------
// Single line comment
component CommentComponent { // Comment after code
    // Comment inside block
    parameters {
        value = 10; // Comment after parameter
    } /* Block comment */
    /* Multi-line
       block comment */
    pins {
        /* Nested /* block */ comment */ // This might be tricky depending on parser generator
        pin p1 : in signal; # Hash comment TBD? VHDL uses --
    }
} end component;

// Library Statement
// -----------------
library ieee;
use ieee.std_logic_1164.all;
// use work.my_package.all; // TBD: Need package definition first

// Ternary Expression
// ------------------
// Assigning to a property or variable (TBD when variables are added)
// property = (condition == "active") ? "ON" : "OFF";

// Typed Parameters
// ----------------
component TypedParams {
  parameters {
    width: integer = 32;
    delay: time = 5ns;
    name: string;
  }
} end component;

// Generate with Component Instantiation (Nested Example)
// -------------------------------------------------------
component TopLevel {
    parameters { N = 2; M = 3; }
    components {
        generate i in 0 .. N-1 loop
            generate j in 0 .. M-1 loop
                Resistor R_nested[i][j](Value = (i+j)*1k);
            end loop; // Added end loop
        end loop; // Added end loop
    }
} end component; 